--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Pranshul Gupta",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
   }
