--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Pranshul Gupta",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.5",
@@ -21,6 +22,7 @@
     "express-session": "^1.17.1",
     "node-sass-middleware": "^0.11.0",
     "nodemon": "^2.0.4",
+    "noty": "^3.2.0-beta",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   }
