--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "node-sass-middleware": "^0.11.0",
+    "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "noty": "^3.2.0-beta",
     "passport": "^0.4.1",
