--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod_start": "SET NODE_ENV= production & nodemon index.js" 
+    "prod_start": "SET NODE_ENV= production & nodemon index.js"
   },
   "keywords": [
     "Social"
@@ -24,6 +24,7 @@
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "kue": "^0.11.6",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.4.11",
@@ -34,6 +35,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "rotating-file-stream": "^2.1.3",
     "socket.io": "^2.3.0"
   }
 }
