final part ... deployment

--- a/public/assets/rev-manifest.json
+++ b/public/assets/rev-manifest.json
@@ -4,5 +4,9 @@
   "css/header.css": "css/header-d41d8cd98f.css",
   "css/home.css": "css/home-88aca30fc4.css",
   "css/layout.css": "css/layout-a2c0f4f3fb.css",
-  "css/user_profile.css": "css/user_profile-e1ce9248d7.css"
+  "css/user_profile.css": "css/user_profile-e1ce9248d7.css",
+  "js/chat_engine.js": "js/chat_engine-e358936124.js",
+  "js/home_post_comments.js": "js/home_post_comments-379ce85158.js",
+  "js/home_posts.js": "js/home_posts-9b482f9f5a.js",
+  "js/toggle_likes.js": "js/toggle_likes-6888e2eea1.js"
 }
